apps/iris/manifest/service--iridescence-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: iridescence-postgres
  name: iridescence-postgres
spec:
  ports:
    - name: 5432-5432
      port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    app: iridescence-postgres
  type: ClusterIP
