apps/iris/manifest/service--iridescence.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: iridescence
  name: iridescence
spec:
  ports:
    - name: 80-3000
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: iridescence
  type: ClusterIP
