apps/iris/manifest/ingress.networking.k8s.io--iridescence.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: iridescence
spec:
  ingressClassName: traefik
  rules:
    - host: iris.a.f4n.dev
      http:
        paths:
          - backend:
              service:
                name: iridescence
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - iris.a.f4n.dev
      secretName: iridescence-tls-staging
