apps/iris/manifest/deployment.apps--iridescence.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: iridescence
  name: iridescence
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iridescence
  template:
    metadata:
      labels:
        app: iridescence
    spec:
      containers:
        - envFrom:
            - secretRef:
                name: iridescence-configuration
          image: ghcr.io/pastel-biota/iridescence:v4.0.1
          imagePullPolicy: IfNotPresent
          name: iridescence
          ports:
            - containerPort: 3000
              protocol: TCP
      dnsPolicy: ClusterFirst
      imagePullSecrets:
        - name: docker-ghcr-creds
      restartPolicy: Always
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: iridescence-receive-public-http-via-traefik
  namespace: iris
spec:
  podSelector:
    matchLabels:
      app: iridescence
  policyTypes:
    - Ingress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: kube-system
        podSelector:
          matchLabels:
            app.kubernetes.io/name: traefik
      ports:
        - protocol: TCP
          port: 3000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: iridescence-request-internal-ssr
  namespace: iris
spec:
  podSelector:
    matchLabels:
      app: iridescence
  policyTypes:
    - Egress
  egress:
    # FIXME: probably I should request using *.svc.cluster.local
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: kube-system
        podSelector:
          matchLabels:
            app.kubernetes.io/name: traefik
      ports:
        - port: 8443
          protocol: TCP
