apps/iris/manifest/deployment.apps--iris-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: iris-app
  name: iris-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iris-app
  template:
    metadata:
      labels:
        app: iris-app
    spec:
      imagePullSecrets:
        - name: docker-ghcr-creds
      restartPolicy: Always
      securityContext:
        fsGroup: 10000
      volumes:
        - name: iris-dir
          persistentVolumeClaim:
            claimName: pvc-iris-dir
        - configMap:
            defaultMode: 420
            name: iris-toml
          name: iris-toml
        - name: iris-secret-toml
          secret:
            defaultMode: 420
            secretName: iris-secret-toml
      containers:
        - command:
            - /app/iris
            - server
            - -c
            - /app/iris.toml
            - -c
            - /app/iris.secret.toml
          image: ghcr.io/pastel-biota/iris:v4.0.0
          imagePullPolicy: IfNotPresent
          name: iris
          ports:
            - containerPort: 80
              protocol: TCP
          resources: {}
          securityContext:
            runAsGroup: 10000
            runAsUser: 10000
          volumeMounts:
            - mountPath: /app/iris-storage
              name: iris-dir
            - mountPath: /app/iris.toml
              name: iris-toml
              subPath: iris.toml
            - mountPath: /app/iris.secret.toml
              name: iris-secret-toml
              subPath: iris.secret.toml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: iris-accept-internal-ssr
  namespace: iris
spec:
  podSelector:
    matchLabels:
      app: iris-app
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: iridescence
      ports:
        - protocol: TCP
          port: 80
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: iris-accept-public-http-via-traefik
  namespace: iris
spec:
  podSelector:
    matchLabels:
      app: iris-app
  policyTypes:
    - Ingress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: kube-system
        podSelector:
          matchLabels:
            app.kubernetes.io/name: traefik
      ports:
        - protocol: TCP
          port: 80
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: iris-accept-internal-federation
  namespace: iris
spec:
  podSelector:
    matchLabels:
      app: iris-app
  policyTypes:
    - Ingress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: iris-public
        podSelector:
          matchLabels:
            app: iris-app
      ports:
        - protocol: TCP
          port: 80
